# detsky_den2026

./: .gitignore  README.md  main.py  providers.py  pyproject.toml
